# tenki

./: Cargo.toml  LICENSE  Makefile  README.md
doc/: demo.tape
scripts/: setup.sh
src/: app.rs  cli.rs  main.rs  state.rs  tui.rs  ui.rs  util.rs
src/state/: buffer.rs  dropping.rs  mod.rs  tail.rs  timer.rs  wind.rs
src/weather/: dropping.rs  empty.rs  mod.rs
src/widget/: fps.rs  mod.rs  rain.rs  snow.rs  stars.rs  timer.rs  weather.rs
