[package]
name = "tenki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
ratatui = "0.25.0"
tokio = { version = "1.35.1", features = ["macros", "process", "rt", "rt-multi-thread", "signal", "time", "sync"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.30"
rand = { version = "0.8.5", features = ["small_rng"] }
tinyvec = "1.6.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = 'abort'
