[package]
name = "tenki"
version = "1.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
ratatui = "0.26.0"
tokio = { version = "1.35.1", features = ["macros", "process", "rt", "rt-multi-thread", "signal", "time", "sync"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.30"
rand = { version = "0.8.5", features = ["small_rng"] }
tinyvec = "1.6.0"
itertools = "0.12.0"
chrono = { version = "0.4.31", features = ["std", "clock"], default-features = false }
clap = { version = "4.4.18", features = ["derive"] }
clap-num = "1.1.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = 'abort'
